# Camilla

./: .gitignore  CHANGELOG.md  NOTICE  README.md  meson.build
.github/workflows/: build.yml  test.yml
data/: camilla-log4vala.conf  camilla.desktop
doc/log4vala/: README.md
doc/model/: model.pu
etc/: plantuml_config.pu  uncrustify.cfg
man/en/: camilla.md
man/ja/: camilla.md
po/: LINGUAS  POTFILES  camilla.pot  en_LT.po  ja.po  lt.po  meson.build  pl.po
scripts/: installer.sh  manInstaller.sh  mkman.sh  setupDevelopmentEnvForUbuntu.sh
src/: Application.vala  Banner.vala  Camilla.vala  Configs.vala  meson.build
src/core/: ArgParser.vala  File.vala  Objects.vala  Stdout.vala  String.vala
src/log4vala/Appender/: FileAppender.vala
src/model/: AccessModifier.vala  Class.vala  Function.vala  LineOfCode.vala  Method.vala  Namespace.vala  SourceCode.vala  Struct.vala  Variable.vala
src/parser/: CountLineOfCode.vala  DeleteComment.vala  SourceCodeParser.vala
test/: meson.build
test/log4vala/: AbstractTestCase.vala  Config.test.vala  Layout.DescriptiveLayout.test.vala  Layout.PatternLayout.test.vala  Layout.SimpleLayout.test.vala  Level.test.vala  Logger.test.vala  LoggerConfig.test.vala  TestRunner.vala
